force-app/src/objects/TR1__ATS_New_Contact_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__Field_Set_Name__c</fullName>
        <label>Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Section_Name__c</fullName>
        <label>Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ATS New Contact Configuration</label>
    <pluralLabel>ATS New Contact Configurations</pluralLabel>
</CustomObject>